# crux-256

./: Cargo.toml  README.md  SECURITY.md
benches/: cipher_bench.rs
src/: arx.rs  cipher.rs  errors.rs  ffi.rs  gcm.rs  key_schedule.rs  lib.rs  modes.rs  padding.rs  permutation.rs  sbox.rs  tests.rs  traits.rs  utils.rs  wasm.rs
