[package]
name = "crux-256"
version = "0.1.0"
edition = "2021"
description = "CRUX-256: Experimental symmetric block cipher combining SPN and ARX architectures"
license = "MIT OR Apache-2.0"
authors = ["Your Name <your.email@example.com>"]

[dependencies]
# Add dependencies as needed, e.g., for testing
# rand = "0.8" for random keys in tests

[dev-dependencies]
# Add if needed for benchmarking