[package]
name = "crux-256"
version = "0.1.0"
edition = "2021"
description = "CRUX-256: Experimental symmetric block cipher combining SPN and ARX architectures"
license = "MIT OR Apache-2.0"
authors = ["Your Name <your.email@example.com>"]

[dependencies]
# For WASM support
wasm-bindgen = { version = "0.2", optional = true }

[features]
default = []
wasm = ["wasm-bindgen"]

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "cipher_bench"
harness = false